--- a/src/main/resources/templates/products/index.html
+++ b/src/main/resources/templates/products/index.html
@@ -40,6 +40,7 @@
                     <div class="col-md-1">
                         <a th:href="@{'products/'+${product.id}}" >Zobacz</a>
                         <a th:href="@{'products/edit/'+${product.id}}" >Edytuj</a>
+                        <a th:href="@{'products/delete/'+${product.id}}" >Usuń</a>
                     </div>
                 </div>
             </div>
